--- a/module-3/css/styles.css
+++ b/module-3/css/styles.css
@@ -22,9 +22,9 @@ body {
   padding-top: 60px;
 }
 .wrapper  h1, h2, h3, h4 {
+  line-height: 1.5;
 	text-align: left;
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; 
-  font-style: normal;
   color: #263555;
   margin-left: 37px;
   margin-right: 37px;
