--- a/module-5/css/styles.css
+++ b/module-5/css/styles.css
@@ -1,24 +1,163 @@
 * {
-	margin: 0;
+margin: 0;
 	padding: 0;
-	background: black;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	border: 0px	;
 }
 
 body {
 background: url('../img/background.jpg') 100% 100% no-repeat;
 background-size: cover;
 padding-top: 45px;
+padding-bottom: 700px;
 }
 
+ul > li {
+	display: inline-block;
+	color: #fff;
+	list-style: none;	
+	font-family: 'pathwaygothicone', sans-serif;
+	font-size: 16px;
+	margin-left: 20px;
+	margin-right: 20px;
+	vertical-align: middle;
 
-.wrapper {
-	width: 1024px;
+}
+
+ul {
+    text-align: center;
+    position: relative;
+}
+
+header {
+	width: 900px;
 	height: auto;
-	padding-right: 60px;
-	padding-left: 60px;
+	margin: 0 auto;
+	padding-left: 100px;
+	padding-right: 100px;
+
+	
+}
+
+a {
+	text-decoration: none;
+	color: #fff;
+}
+a.logo{
+	width: 140px;
+   	height: 140px;
+   	color: #263555;
+	content: 'JOURNEY';
+  	display: inline-block;
+  	background: white;
+  	border-radius: 70px;
+}
+
+main {
+	position: relative;
+	width: 900px;
+	height: auto;
+	padding-left: 62px; 
+	padding-right: 62px;
 	padding-bottom: 135px;
 	padding-top: 60px;
 	background: #fff;
 	margin: 0 auto;
 }
 
+/* logo */
+.logo-text {
+	position: absolute;
+	right: 396px;
+	top: 60px;
+	color: #263555;
+	font-family: 'pathwaygothicone', sans-serif; 
+	font-size: 25px;
+	z-index: 999;
+}
+
+/* slider */
+
+.slider {
+	text-align: center;
+}
+
+.middle-text {
+	font-family: 'pathwaygothicone', sans-serif; 
+	font-size: 20px;
+	color: #263555;
+	margin-top: 55px;
+	margin-bottom: 50px;
+}
+
+/* detaiuls */
+
+.details {
+	position: relative;
+}
+.details > img {
+	display: inline-block;
+	margin-left: 5px;
+	margin-right: 5.5px;
+}
+
+.details > img:first-of-type {
+	margin-left: 0px;
+}
+
+.details > img:last-of-type {
+	margin-right: 0px;
+}
+
+.details:before {
+	display: table-cell;
+	vertical-align: middle;
+	width: 145px;
+	height: 272px;
+	font-family: Arial, sans-serif; 
+	font-size: 11px;
+	position: absolute;
+	background-color: #193149;
+	color: white;
+	content: '';
+	background-size: 100px 100px;
+	text-align: left;
+}
+
+.details:after {
+	position: absolute;
+	right: 770px;
+	top: 230px;
+	font-family: Arial, sans-serif; 
+	font-size: 14px;
+	position: absolute;
+	color: black;
+	content: 'Details';
+	text-align: center;
+	background: white;
+	width: 60px;
+   	height: 20px;
+   	border-radius: 5px;
+}
+
+h3 {
+	font-size: 30px;
+}
+
+.detail-text {
+	width: 140px;
+	position: absolute;
+	right: 750px;
+	top: 40px;
+	color: white;
+	font-family: Arial, sans-serif; 
+	font-size: 11px;
+}
+
+h3 {
+	font-size: 20px;
+	text-align: center;
+	margin-bottom: 25px;
+}
