--- a/module-3/css/styles.css
+++ b/module-3/css/styles.css
@@ -1,39 +1,26 @@
+* {
+margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  border: 0px ;
+}
+
 body {
   background-image: url('../img/page-bg.jpg');
   background-repeat: no-repeat;
-  background-size: 100%;
-}
-
-.wrapper{
-  width:480px;
-  margin: 0 auto;
-  background: #fff;
-}
-
-.wrapper p {
-  font-size: 12px;
-  margin-left: 37px;
-  margin-right: 37px;
-  margin-top: 20px;
-
-}
-
-.wrapper  h1 {
-  padding-top: 60px;
-}
-.wrapper  h1, h2, h3, h4 {
-  line-height: 1.5;
-	text-align: left;
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; 
-  color: #263555;
-  margin-left: 37px;
-  margin-right: 37px;
+  background-size: 100% 100%;
+  padding-bottom: 550px;
+  margin-top: 245px;
+  height: 100%;
 }
 
 hr {
+  margin-bottom: 50px;
+  margin-top: 50px;
   color: #dedbdb;
-  border-image-repeat: 
-  border: 1px;
+  border: 2px;
   margin-left: 20px;
   margin-right: 20px;
 }
@@ -71,6 +58,36 @@ li {
   list-style-type: none;
 }
 
+div > h2 {
+  margin-top: 55px;
+  margin-bottom: 30px;
+}
+
+.wrapper{
+  width:480px;
+  margin: 0 auto;
+  background: #fff;
+  padding-bottom: 40px;
+  padding-top: 60px;
+}
+
+.wrapper p {
+  font-size: 12px;
+  margin-left: 37px;
+  margin-right: 37px;
+  margin-top: 20px;
+}
+
+.wrapper  h1, h2, h3, h4 {
+  text-align: left;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; 
+  font-style: normal;
+  color: #263555;
+  margin-left: 37px;
+  margin-right: 37px;
+}
+
+
 .content li{
   display: inline-block;
   margin-left: 40px;
@@ -81,6 +98,11 @@ li {
   margin-right: -4px;
 }
 
-.content ul {
-  padding-bottom: 20px;
+
+.regular {
+  margin-bottom: 25px;
+}
+
+.second-p {
+  margin-bottom: 40px;
 }
