--- a/module-3/css/styles.css
+++ b/module-3/css/styles.css
@@ -46,6 +46,8 @@ margin: 0;
 padding: 0;
 }
 
+
+
 img{
   display: block;
 	margin: 0 auto;
@@ -96,13 +98,12 @@ div > h2 {
   text-align: left; 
   color: #263555;
   margin-right: -4px;
-}
-
+padding-left: 20px; }
 
 .regular {
   margin-bottom: 25px;
 }
 
 .second-p {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
