--- a/module-4/css/styles.css
+++ b/module-4/css/styles.css
@@ -1,3 +1,17 @@
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  border: 0px ;
+}
+
+p {
+    margin: 0 auto;
+  padding: 0 auto;
+}
+
 body {
   background: url('../img/fon.jpg') 100% 100% no-repeat;
   background-size: cover;
@@ -16,8 +30,8 @@ h4 {
 img {
   width: 350px;
   float: left;
-  margin: 10px;
-  padding-right: 20px;
+  margin-right: 25px;
+  margin-bottom: 20px;
 }
 
 ul > li:before {
@@ -27,8 +41,8 @@ ul > li:before {
 }
 
 hr {
-  margin-top: 55px;
-  margin-bottom: 55px;
+  margin-bottom: 50px;
+  margin-top: 50px;
   color: #dedbdb;
   border-image-repeat: 
   border: 1px;
@@ -48,11 +62,33 @@ h1, h2, h4, h5 {
 
 }
 
+h2 {
+  font-family: 'Pathway Gothic One', sans-serif;
+  font-size: 32px;
+  margin-bottom: 48px;
+}
+
+h4 {
+  font-size: 17px;
+  font-weight: bold;
+}
+
+h5 {
+  font-size: 15px;
+  font-weight: bold;
+}
+
+ul {
+  margin-top: 35px;
+}
+
 .content li {
   display: inline-block;
   list-style-type: none;
   color: #344260;
-  width: 300px;
+  width: 250px;
+  font-weight: 600;
+  font-size: 18px;
 }
 
 .wrapper {
@@ -61,7 +97,7 @@ h1, h2, h4, h5 {
   line-height: 1.5;
   font-stretch: condensed;
   background-color: white;
-  width:1022px;
+  width:904px;
   margin: 0 auto; 
   padding-top: 115px;
   padding-bottom: 88px;
@@ -72,14 +108,14 @@ h1, h2, h4, h5 {
 
 .first_column {
   display: inline-block;
-  width: 700px;
+  width: 640px;
   margin-right: -4px;
   padding-right: 60px;
 }
 
 .second_column {
   display: inline-block;
-  width: 184px;
+  width: 178px;
   vertical-align: top;
   padding-left: 25px;
 }
@@ -101,20 +137,20 @@ h1, h2, h4, h5 {
   color: white;
   counter-increment: count-box;
   content: counter(count-box);
-  padding-right: 5px;
-  padding-left: 4px;
+  padding-right: 8px;
+  padding-left: 8px;
   margin-right: 10px;
   margin-left: -30px;
   background: #38afe5;
   -moz-border-radius: 30px;
   -webkit-border-radius: 30px;
-  border-radius: 10px;
+  border-radius: 30px;
   border: #4497bc solid 1px;
 }
 
 .bubble {
   position: relative;
-  width: 210px;
+  width: 208px;
   height: 190px;
   padding: 0px;
   background: #fcfafa;
@@ -122,6 +158,7 @@ h1, h2, h4, h5 {
   -moz-border-radius: 10px;
   border-radius: 10px;
   border: #e9e6e6 solid 1px;
+  right: 30px;
 }
 
 .bubble:after {
