--- a/module-5/css/styles.css
+++ b/module-5/css/styles.css
@@ -18,22 +18,24 @@ ul > li {
 	display: inline-block;
 	color: #fff;
 	list-style: none;	
-	font-family: 'pathwaygothicone', sans-serif;
-	font-size: 16px;
-	margin-left: 20px;
-	margin-right: 20px;
+	font-family: 'Pathway Gothic One', sans-serif; 
+	font-size: 28px;
+	margin-left: 12.5px;
+	margin-right: 12.5px;
 	vertical-align: middle;
 
 }
 
 ul {
-    text-align: center;
+	margin-left: 100px;
+	margin-right: 100px;
+	margin-bottom: 30px;
     position: relative;
+
 }
 
 header {
 	width: 900px;
-	height: auto;
 	margin: 0 auto;
 	padding-left: 100px;
 	padding-right: 100px;
@@ -70,22 +72,32 @@ main {
 /* logo */
 .logo-text {
 	position: absolute;
-	right: 396px;
-	top: 60px;
+	right: 305px;
+	top: 40px;
 	color: #263555;
-	font-family: 'pathwaygothicone', sans-serif; 
-	font-size: 25px;
+	font-family: Dorsa, sans-serif;
+	font-size: 60px;
 	z-index: 999;
 }
 
 /* slider */
 
-.slider {
-	text-align: center;
+#images {
+    width: 902px;
+    height: 579px;
+    overflow: hidden;
+    position: relative;
 }
 
+#slider a {
+    color: #222;
+
+
+}
+
+
 .middle-text {
-	font-family: 'pathwaygothicone', sans-serif; 
+	font-family: 'Pathway Gothic One', sans-serif; 
 	font-size: 20px;
 	color: #263555;
 	margin-top: 55px;
@@ -160,4 +172,28 @@ h3 {
 	font-size: 20px;
 	text-align: center;
 	margin-bottom: 25px;
+}
+
+/*top button*/
+.topbutton {
+	position: absolute;
+width:20px;
+height:20px;
+background:#38afe5;
+padding:10px;
+bottom:20px;
+right:15px;
+color:#fff;
+border-radius: 30px;
+-moz-border-radius: 30px;
+-webkit-border-radius: 30px;
+-khtml-border-radius: 30px;
+}
+
+.topbutton:before {
+content: url(../img/up.png);	
+position: absolute;
+width:20px;
+height:20px;
+right: 6px;
 }
