--- a/module-5/css/styles.css
+++ b/module-5/css/styles.css
@@ -321,7 +321,7 @@ height:20px;
 background:#38afe5;
 padding:10px;
 bottom:90px;
-right:130px;
+right:13%;
 color:#fff;
 border-radius: 30px;
 -moz-border-radius: 30px;
