--- a/module-6/css/styles.css
+++ b/module-6/css/styles.css
@@ -1,7 +1,3 @@
-* {
-	color: #4e5050;
-}
-
 body {
 background: url('../img/background.jpg') 100% 100% no-repeat;
 background-size: cover;
@@ -19,6 +15,7 @@ main {
 	padding-left: 60px;
 	padding-right: 60px;
 	padding-bottom: 75px;
+	color: #4e5050;
 }
 
 p {
@@ -27,6 +24,7 @@ p {
     font-family: Arial, sans-serif; 
 	font-size: 13px;
 	line-height: 1.5;
+	color: #4e5050;
 
 }
 ul > li {
@@ -203,8 +201,8 @@ h4 {
   color: white;
   counter-increment: count-box;
   content: counter(count-box); 
-  padding-right: 8px;
-  padding-left: 8px;
+  padding-right: 9px;
+  padding-left: 9px;
   padding-top: 4px;
   padding-bottom: 4px;
   margin-right: 10px;
@@ -382,8 +380,19 @@ footer {
 	font-weight: lighter;
 }
 
+
+
+
+
 .post-data {
-	display: inline-block;	
+	display: flex;	
+	flex-direction: row;
+	justify-content: flex-start;
+	margin-bottom: 10px;
+	
+}		
+
+.data-circle{
 	padding: 5px;
 	text-align: center;
 	background-color: #38afe5;
@@ -391,30 +400,43 @@ footer {
 	width: 30px;
 	height: 30px; 
   	color: #fff;
-}		
+}
+
+.post-info {
+	display: flex;
+	flex-direction: column;
+	line-height: 0.7;
+	width: 80%;
+}
 
 .post-data p{
-
-		font-size: 9px;
-		color: #fff;
-		word-wrap: break-word;
+	font-family: Arial, sans-serif;
+	font-size: 9px;
+	color: #fff;
+	word-wrap: break-word;
 }
 
 .posted-by {
 	display: inline-block;	
+	margin-left: 10px;
+	font-size: 13px;
 }
 
 
 .posted-on {
-	display: inline-block;
+	display: flex;
+	justify-content: space-between;
+	margin-left: 10px;
+	font-size: 10px;
+	color: #868f8f;
 }
 
-.second-span {
-	text-align: right;	
-}
-.posted-comment{
-	text-align: right;	
-}
+
+
+
+
+
+
 
 /* CATEGORIES ARCHIVE */
 .post-aside {
@@ -423,7 +445,7 @@ footer {
 	align-items: flex-start;
 }
 
-.posts div > img {
+.float {
 	float: left;
 	margin-right: 25px;
 	margin-bottom: 20px;
