--- a/module-6/css/styles.css
+++ b/module-6/css/styles.css
@@ -124,6 +124,10 @@ nav {
   border-radius: 3px;
 }
 
+.first-submenu {
+	position: relative;
+	left: -4px;
+}
 /* делаем .submenu видимым */
 
 .menu__item:hover>.submenu {
@@ -160,7 +164,7 @@ nav {
 	background-color: #fff;
 }
 
-section {
+.posts, .profiles{
 	width: 700px;
 }
 aside {
@@ -499,3 +503,72 @@ footer {
 	margin-bottom: 55px;
 }
 
+/* GALLERY */
+
+.gallery {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	margin-bottom: 80px;
+}
+
+.gallery img {
+	margin-bottom: 10px;
+}
+
+/*top button*/
+.topbutton {
+	position: fixed;
+	width:20px;
+	height:20px;
+	background:#38afe5;
+	padding:10px;
+	bottom:90px;
+	right:13%;
+	color:#fff;
+	border-radius: 30px;
+	-moz-border-radius: 30px;
+	-webkit-border-radius: 30px;
+	-khtml-border-radius: 30px;
+}
+
+.topbutton:before {
+
+	content: url(../img/up.png);	
+	position: absolute;
+	width:20px;
+	height:20px;
+	right: 6px;
+}
+.gallery {
+	position: relative;
+}
+
+.image {
+	position: relative;
+	margin: 0;
+	padding: 0;
+}
+
+.image>img {
+opacity:0.8;
+-moz-opacity:0.8;
+filter: alpha(opacity=80) black;
+-khtml-opacity: 0.8;
+background-color:#000;
+}
+
+.image>img:hover {
+opacity:1;
+-moz-opacity:1;
+filter: alpha(opacity=100) black;
+-khtml-opacity: 1;
+background-color:#000;
+}
+
+.image:hover:before {
+	position: absolute;
+	content: url(../img/gallery/lupa.png);	
+	top:75px;
+	left: 130px;
+}
