--- a/module-5/css/styles.css
+++ b/module-5/css/styles.css
@@ -244,17 +244,17 @@ h3 {
 .details {
 	position: relative;
 }
-.details > img {
+.details > div {
 	display: inline-block;
 	margin-left: 5px;
 	margin-right: 5.5px;
 }
 
-.details > img:first-of-type {
+.details > div:first-of-type {
 	margin-left: 0px;
 }
 
-.details > img:last-of-type {
+.details > div:last-of-type {
 	margin-right: 0px;
 }
 
@@ -294,7 +294,7 @@ h3 {
 	position: absolute;
 	display: none;
 	width: 140px;
-	right: 750px;
+	right: 755px;
 	top: 40px;
 	color: white;
 	font-family: Arial, sans-serif; 
@@ -302,11 +302,11 @@ h3 {
 }
 
 .detail-text-ny {
-	right: 450px;
+	right: 451px;
 }
 
 .detail-text-paris {
-	right: 143px;
+	right: 145px;
 }
 
 .detail-fon,
@@ -331,39 +331,23 @@ h3 {
 	left: 609px;
 }
 
-.details:hover>.detail-text {
+.detail1:hover>.detail-text,
+.detail1:hover>.detail-fon,
+.detail1:hover>.detail-button
+ {
   display: block;
 }
 
-.details:hover>.detail-text-ny {
+.detail2:hover>.detail-text-ny,
+.detail2:hover>.detail-fon-ny, 
+.detail2:hover>.detail-button-ny {
   display: block;
 }
 
-.details:hover>.detail-text-paris {
-  display: block;
-}
 
-.details:hover>.detail-fon {
-  display: block;
-}
-
-.details:hover>.detail-fon-ny {
-  display: block;
- }
-
- .details:hover>.detail-fon-paris {
-  display: block;
- }
-
-.details:hover>.detail-button {
-  display: block;
-}
-
-.details:hover>.detail-button-ny {
-  display: block;
-}
-
-.details:hover>.detail-button-paris {
+.detail3:hover>.detail-text-paris,
+.detail3:hover>.detail-fon-paris,
+.detail3:hover>.detail-button-paris {
   display: block;
 }
 
@@ -390,6 +374,7 @@ h3 {
 }
 
 .topbutton:before {
+
 	content: url(../img/up.png);	
 	position: absolute;
 	width:20px;
