--- a/module-7/css/styles.css
+++ b/module-7/css/styles.css
@@ -656,7 +656,7 @@ background-color:#000;
 	margin-bottom: 50px;
 }
 
-/* detaiuls */
+/* details */
 
 h3 {
 	font-size: 30px;
@@ -665,17 +665,17 @@ h3 {
 .details {
 	position: relative;
 }
-.details > img {
+.details > div {
 	display: inline-block;
 	margin-left: 5px;
 	margin-right: 5.5px;
 }
 
-.details > img:first-of-type {
+.details > div:first-of-type {
 	margin-left: 0px;
 }
 
-.details > img:last-of-type {
+.details > div:last-of-type {
 	margin-right: 0px;
 }
 
@@ -715,7 +715,7 @@ h3 {
 	position: absolute;
 	display: none;
 	width: 140px;
-	right: 750px;
+	right: 755px;
 	top: 40px;
 	color: white;
 	font-family: Arial, sans-serif; 
@@ -723,11 +723,11 @@ h3 {
 }
 
 .detail-text-ny {
-	right: 450px;
+	right: 451px;
 }
 
 .detail-text-paris {
-	right: 143px;
+	right: 145px;
 }
 
 .detail-fon,
@@ -752,38 +752,53 @@ h3 {
 	left: 609px;
 }
 
-.details:hover>.detail-text {
+.detail1:hover>.detail-text,
+.detail1:hover>.detail-fon,
+.detail1:hover>.detail-button
+ {
   display: block;
 }
 
-.details:hover>.detail-text-ny {
+.detail2:hover>.detail-text-ny,
+.detail2:hover>.detail-fon-ny, 
+.detail2:hover>.detail-button-ny {
   display: block;
 }
 
-.details:hover>.detail-text-paris {
+
+.detail3:hover>.detail-text-paris,
+.detail3:hover>.detail-fon-paris,
+.detail3:hover>.detail-button-paris {
   display: block;
 }
 
-.details:hover>.detail-fon {
-  display: block;
+h3 {
+	font-size: 20px;
+	text-align: center;
+	margin-bottom: 25px;
 }
 
-.details:hover>.detail-fon-ny {
-  display: block;
- }
-
- .details:hover>.detail-fon-paris {
-  display: block;
- }
-
-.details:hover>.detail-button {
-  display: block;
+/*top button*/
+.topbutton {
+	position: fixed;
+	width:20px;
+	height:20px;
+	background:#38afe5;
+	padding:10px;
+	bottom:90px;
+	right:13%;
+	color:#fff;
+	border-radius: 30px;
+	-moz-border-radius: 30px;
+	-webkit-border-radius: 30px;
+	-khtml-border-radius: 30px;
 }
 
-.details:hover>.detail-button-ny {
-  display: block;
-}
+.topbutton:before {
 
-.details:hover>.detail-button-paris {
-  display: block;
+	content: url(../img/up.png);	
+	position: absolute;
+	width:20px;
+	height:20px;
+	right: 6px;
 }
