--- a/module-7/css/styles.css
+++ b/module-7/css/styles.css
@@ -825,7 +825,7 @@ h3 {
 
 
 .map-text {
-	width: 	24%;
+	width: 	22%;
 	font-family: Arial, sans-serif;
 	font-size: 13px;
 	color: #666565;
@@ -837,17 +837,65 @@ h3 {
 }
 
 .map-h2 {
+	display: flex;
+	justify-content: space-between;
 	width: 100%;
-	font-size: 32px;
-	font-weight: 100;
 }
 
+.map-h2  h2{
+	font-size: 32px;
+	font-weight: 100;
+	margin: 0;
+	padding: 0;
+	margin-bottom: 50px;
+}
 
 /* FORM */
 .form {
 	width: 24%;
+	position: relative;
+}
+
+.form-method {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-flow: column;
+	justify-content: space-between;
 }
 
 .red-text {
 	color: red;
+}
+
+.buttons {
+	display: flex;
+	justify-content: space-around;
+}
+
+
+.form input, textarea {
+	background-color: #fcfafa;	
+	outline: none;
+	border: 1.5px solid #d4d0d0;
+	color: #263555;
+	font-weight: 500;
+}
+
+.buttons > input {
+	background-color: #fcfafa;	
+	outline: none;
+	border: 1.5px solid #d4d0d0;
+	border-radius: 7px;
+	width: 80px;
+	height: 27px;
+}
+
+.form-method::before {
+	position: absolute;
+	content: '*This field is required.';
+	color: red;
+	font-size: 11px;
+	top: 4px;
+	left: 110px;
 }
