--- a/module-6/css/styles.css
+++ b/module-6/css/styles.css
@@ -350,26 +350,29 @@ footer {
 }
 
 .icons {
-	width: 1200px;
+	width: 100%;
 	margin: 0 auto;
 	display: flex;
 	padding: 0;
 	justify-content: center;
+	margin-bottom: 20px;
 }
-.bg-fb{
+
+.bg-same{
     width: 40px; height: 40px;
+    list-style-type: none;
+}
+
+.bg-fb{
     background: url('../img/social-icons/css_sprites.png') -10px -10px;
 }
 .bg-gp {
-    width: 40px; height: 40px;
     background: url('../img/social-icons/css_sprites.png') -70px -10px;
 }
 .bg-ln {
-    width: 40px; height: 40px;
     background: url('../img/social-icons/css_sprites.png') -10px -70px;
 }
 .bg-tw {
-    width: 40px; height: 40px;
     background: url('../img/social-icons/css_sprites.png') -70px -70px;
 }
 
@@ -379,6 +382,7 @@ footer {
 }
 
 .social-text {
+	width: 100%;
 	font-family: Arial, sans-serif;
 	font-size: 12px;
 	color: #fff;
