--- a/module-7/css/styles.css
+++ b/module-7/css/styles.css
@@ -163,6 +163,7 @@ nav {
 	flex-wrap: wrap;
 	background-color: #fff;
 }
+/************* ABOUT  ***************************/
 
 .posts, .profiles{
 	width: 700px;
@@ -195,9 +196,7 @@ h4 {
   margin-bottom: 20px;
 }
 
-
 /* ASIDE BLOCK */
-
 
 .circle:before {
   font-weight: lighter;
@@ -388,7 +387,7 @@ footer {
 	text-align: center;
 }
 
-/*** BLOG ***/
+/********************* BLOG *************************888/
 
 /* RECENT POSTS */
 
@@ -401,10 +400,6 @@ footer {
 	font-size: 32px;
 	font-weight: lighter;
 }
-
-
-
-
 
 .post-data {
 	display: flex;	
@@ -452,12 +447,6 @@ footer {
 	font-size: 10px;
 	color: #868f8f;
 }
-
-
-
-
-
-
 
 
 /* CATEGORIES ARCHIVE */
@@ -521,7 +510,7 @@ footer {
 	margin-bottom: 55px;
 }
 
-/* GALLERY */
+/********************** GALLERY **************************/
 
 .gallery {
 	display: flex;
@@ -591,7 +580,7 @@ background-color:#000;
 	left: 130px;
 }
 
-/* HOME */
+/********************* HOME **************************8/
 /* slider */
 
 #images {
@@ -1018,7 +1007,7 @@ h3 {
 	right: 6px;
 }
 
-/* CONTACTS*/
+/********************* CONTACTS*************************/
 .contact-section {
 	width: 100%;
 	display: flex;
@@ -1103,4 +1092,132 @@ h3 {
 	font-size: 11px;
 	top: 4px;
 	left: 110px;
+}
+
+/************** TOURS *****************/
+
+/* Tours Section */
+
+.tours-h2 {
+	width: 100%;
+	font-size: 32px;
+	font-weight: 300;
+}
+
+.tours {
+	width: 70%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+.tour {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	width: 49.6%;
+	margin-bottom: 35px;
+	height: 26.25%;
+}
+
+.tour-image {
+	width: 49.5%;
+	margin: 0 auto;
+}
+
+.tour-info {
+	width: 49.5%;
+}
+
+.tour-info p {
+	font-size: 10px;
+	margin-top: 10px;
+}
+.main-tour-text {
+	font-family: Arial, sans-serif;
+	font-size: 12px;
+	color: #263555;
+}
+
+.price {
+	font-size: 13px;
+	color: #60bbe9;
+}
+
+.tour-button{
+	text-align: left;
+
+}
+
+.tour-button input {
+	background-color: #fbf6f9;	
+	outline: none;
+	border: 1.5px solid #beb7b8;
+	border-radius: 5px;
+	width: 60px;
+	height: 20px;
+	margin-top: 30px;
+	cursor: pointer;
+	font-size: 11px;
+	margin-bottom:
+}
+
+/* Tours Aside */
+
+.browse {
+	width: 28.0%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.browse-text {
+	font-size: 10px;
+	color: #4e5050;
+	margin-bottom: 5px;
+}
+
+.browse-select {
+	width: 100%;
+	height: 20px;
+	background-color: #fcfafa;
+	border: #dedbdb 1px solid;
+	color: #868f8f;
+	margin-bottom: 25px;
+}
+
+.select {
+	width: 90%;
+	position: relative;
+}
+
+.select:after {
+	position: absolute;
+	z-index: 100;
+	content: '';
+	width: 1px;
+	height: 20px;
+	bottom: 55%;
+	right: 20px;
+	background-color: #dedbdb;
+}
+
+option {
+	color: #fff;
+	background-color: #e3e2e2;
+}
+
+.tours-h2-search {
+	width: 100%;
+	font-size: 32px;
+	font-weight: 300;
+	margin-top: 10px;
+	margin-bottom: 40px;
+}
+
+.blue-p {
+	margin: 0;
+	margin-bottom: 5px;
+	font-size: 10px;
+	color: #38afe5;
 }
