--- a/module-6/css/styles.css
+++ b/module-6/css/styles.css
@@ -358,6 +358,17 @@ footer {
 	margin-bottom: 20px;
 }
 
+.icons li{
+	padding: 0px;
+}
+
+.icons li a { 
+	margin: 0px; 
+	display: block; 
+	width: 100%; 
+	height: 100%; 
+}
+
 .bg-same{
     width: 40px; height: 40px;
     list-style-type: none;
