--- a/module-8/css/styles.css
+++ b/module-8/css/styles.css
@@ -4,10 +4,9 @@
 }
 
 body {
-	background: url('../img/background.jpg') no-repeat;
+	background: url('../img/background.jpg') 100% 100% no-repeat;
 	background-size: cover;
 	box-sizing: border-box;
-	height: 100vh;
 }
 
 nav {
@@ -304,28 +303,164 @@ a {
 	min-width: 320px;
 	margin: 0 auto;
 	background-color: #fff;
+	padding-top: 60px;
+	padding-bottom: 75px;
 }
+
+h2{
+	position: relative;
+	left: 37px;
+	font-family: 'Pathway Gothic One', sans-serif; 
+	font-size: 28px;
+	font-weight: 100;
+	color: #263555;
+	margin: 0 auto;
+	margin-bottom: 15px;
+}
+
+.gallery {
+	position: relative;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	margin-left: 37px;
+	margin-right: 37px;
+}
+
+.content {
+	position: relative;
+}
+
+.image {
+	position: relative;
+	margin-bottom: 20px;
+	margin-top: 20px;
+}
+
+.image img {
+	width: 407px;
+	height: auto;
+}
+
+.image>img {
+opacity:0.8;
+-moz-opacity:0.8;
+filter: alpha(opacity=80) black;
+-khtml-opacity: 0.8;
+background-color:#000;
+}
+
+.image>img:hover {
+opacity:1;
+-moz-opacity:1;
+filter: alpha(opacity=100) black;
+-khtml-opacity: 1;
+background-color:#000;
+}
+
+.image:hover:before {
+	position: absolute;
+	content: url(../img/gallery/lupa.png);	
+	top:100px;
+	left: 190px;
+}
+
+/*top button*/
+
+.strela {
+	position: relative;
+}
+
+.topbutton {
+	position: fixed;
+	width:15px;
+	height:15px;
+	background:#38afe5;
+	padding:10px;
+	bottom:90px;
+	right:10%;
+	color:#fff;
+	border-radius: 30px;
+	-moz-border-radius: 30px;
+	-webkit-border-radius: 30px;
+	-khtml-border-radius: 30px;
+}
+
+.topbutton:before {
+
+	content: url(../img/up.png);	
+	position: absolute;
+	width:20px;
+	height:20px;
+	right: 3px;
+	top: 5px;
+}
+
 
 @media (min-width: 768px) {
 	.main {
 		max-width: 768px;
-		height: 200px;
 	}
 
+	.image img {
+		width: 330px;
+	}
+
+	.last-image {
+		display: none;
+	}
+
+	.image:hover:before {
+		top:80px;
+		left: 155px;
+	}
+
+	.gallery {
+		margin-left: 45px;
+		margin-right: 45px;
+	}
+
+	.topbutton {
+		width:30px;
+		height:30px;
+	}
+
+	.topbutton:before {
+		content: url(../img/up.png);	
+		position: absolute;
+		width:30px;
+		height:30px;
+		right: 0px;
+		top: 10px;
+	}
 
 }
 
 @media (min-width: 1024px) {
 	.main {
 		max-width: 1024px;
-		height: 200px;
 	}
 
+	.image img {
+		width: 288px;
+		height: auto;
+	}
 
+	.last-image {
+		display: unset;
+	}
+
+	.image:hover:before {
+		top:65px;
+		left: 125px;
+	}
+
+	.gallery {
+		margin-left: 60px;
+		margin-right: 60px;
+	}
 }
-
-
-
 
 
 
@@ -432,12 +567,23 @@ ul .footer-mail{
 	text-align: center;
 }
 
+.icons li{
+	padding: 0px;
+}
+
+.icons li a { 
+	margin: 0px; 
+	display: block; 
+	width: 100%; 
+	height: 100%; 
+}
+
 /** FOTTER 768 **/
 
 @media (min-width: 768px) {
 
 	body {
-		background-size: auto;
+		background-size: cover;
 	}
 	footer{
 		max-width: 768px;
