--- a/module-8/css/styles.css
+++ b/module-8/css/styles.css
@@ -399,6 +399,11 @@ background-color:#000;
 
 
 @media (min-width: 768px) {
+
+	h2{
+		left: 49px;
+	}
+
 	.main {
 		max-width: 768px;
 	}
@@ -438,6 +443,10 @@ background-color:#000;
 }
 
 @media (min-width: 1024px) {
+	h2{
+		left: 65px;
+	}
+
 	.main {
 		max-width: 1024px;
 	}
